# AgriEcoAi

./: .gitignore  README.md  imports.txt  pyproject.toml  requirements.txt  sessions.json  start.sh  template.env
app/: main.py
app/api/helpers/: check_language.py  pdf2markdown.py  pdf2text.py  scoring.py
app/api/middlewares/: check_key_middleware.py
app/api/responses/: base.py
app/api/routes/: api.py  chat_agents.py  chat_router.py  recommend.py  scan_cv_router.py  scoring_router.py
app/api/schemas/: __init__.py  score.py
app/api/services/: chat_service.py  extract_service.py  recommend_service.py  scoring_service.py
app/api/services/agents/: agri_chat.py  demand_agent.py  llm_gemini.py  price_agent.py  prompt.py  recommend_agent.py  router_agent.py  test.py
app/api/services/emb_files/: product_metadata_nopro.csv  semantic_vectors.npy
app/core/: config.py  recommender.py
app/core/prompts/v1/intern/: cv.py  jd.py
app/core/prompts/v1/intern/schemas/: cv.py  jd.py
app/tests/: test_extract.py
